# transcriptify

./: BUILD  LICENSE  README.md  WORKSPACE  okteto.yml
.devcontainer/: devcontainer.json
cmd/: BUILD.bazel  main.go
tmpl/: transcript.html.tmpl
transcript/: BUILD.bazel  methods.go  transcript.go  types.go
