load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    deps = [
        "//transcript:go_default_library",
    ],
    importpath = "github.com/r351574nc3/transcriptify/cmd",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cli",
    embed = [":go_default_library"],
    deps = [
    ],
    visibility = ["//visibility:public"],
)